--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@
 /public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
+
+# Fichiers d’IDE et systèmes
+/.php-version
+/.idea
+/.vscode
+*.swp
+*.swo
