--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-
 ###> symfony/framework-bundle ###
+/.env
+/.env.dev
+/.env.test
+/.env.prod
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -18,15 +21,28 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-
-###> symfony/asset-mapper ###
-/public/assets/
-/assets/vendor/
-###< symfony/asset-mapper ###
-
 # Fichiers d’IDE et systèmes
 /.php-version
 /.idea
 /.vscode
 *.swp
 *.swo
+
+/compose.override.yaml
+/composer.lock
+/composer.json
+/compose.yaml
+/importmap.php
+/phpunit.xml.dist
+/symfony.lock
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+
+###> symfony/asset-mapper ###
+/public/assets/
+/assets/vendor/
+###< symfony/asset-mapper ###
