sécurisation pour le prochain push

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ yarn-error.log
 /public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
+config/secrets/dev/dev.decrypt.private.php
+config/secrets/dev/dev.encrypt.public.php
